[style][rm] scrollbar attribute, does this fix the overflow-x issue ?

--- a/src/style/Education.scss
+++ b/src/style/Education.scss
@@ -11,8 +11,6 @@
   padding: 3vw 0;
   overflow-x: scroll;
   overflow-y: hidden;
-  scrollbar-color: $sec-color rgba(0, 0, 0, 0.1);
-  scrollbar-width: thin;
   padding: 5vh 0;
   background: url("../pictures/watercolor4.png");
   background-size: cover;
